--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -14,4 +14,6 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: default-team
+  owner: team-a
+  system: yelb
+  dependsOn: [Component:yelb-appserver]
