--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -10,7 +10,7 @@ metadata:
     - web
     - tanzu
   annotations:
-    'backstage.io/kubernetes-label-selector': 'app=yelb-appserver,tier=middletier'
+    'backstage.io/kubernetes-label-selector': 'app=yelb-ui,tier=frontend'
 spec:
   type: service
   lifecycle: experimental
